<resources>
    <string name="app_name">BMC_Android</string>
    <string name="title_activity_admin">Admin</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_test">test</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="btn_string_login">LOGIN</string>
    <string name="btn_ring_reception">RING RECEPTION</string>
    <string name="prompt_email">Mobile</string>
    <string name="prompt_password">Password (optional)</string>
    <!-- Constant Strings -->
    <string name="PREF_NAME">BMCPref</string>
    <string name="IsLoggedIn">IsLoggedIn</string>
    <string name="logo">just a png file</string>
    <integer name="PRIVATE_MODE">0</integer>
</resources>
